# audio-plugin-coder

./: CMakeLists.txt
.claude/rules/: macos-build-protocols.md  session-handoff.md
gesture_engine/: .gitignore  config.yaml  feature_extractor.py  main.py  one_euro.py  osc_sender.py  requirements.txt  test_landmarks.py
plugins/BeadyEye/: CMakeLists.txt  status.json
plugins/BeadyEye/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/BeadyEye/Source/ui/public/: index.html
plugins/CloudWash/: CMakeLists.txt
plugins/Gazelle/: CMakeLists.txt  status.json
plugins/Gazelle/.ideas/: antilope-reference.md  architecture.md  creative-brief.md  parameter-spec.md  plan.md  visual-reference.md
plugins/Gazelle/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md  v2-test.html
plugins/Gazelle/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Gazelle/Source/ui/public/: index.html
plugins/GestureCV/: CMakeLists.txt  status.json
plugins/GestureCV/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/GestureCV/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GestureCV/Source/ui/public/: index.html
plugins/Splice/: CMakeLists.txt  status.json
plugins/Splice/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/Splice/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/Splice/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Splice/Source/ui/public/: index.html
plugins/gnarly2/: CMakeLists.txt
plugins/gnarly3/: CMakeLists.txt
plugins/nf_gnarly/: CMakeLists.txt
scripts/: au-cache-bust-mac.sh  build-and-install-mac.sh  build-ios-device.sh  build-ios-sim.sh  pluginval-mac.sh  setup-mac.sh  state-management-mac.sh  system-check-mac.sh
test/: Notes.md
